Header alignment fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -103,6 +103,143 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
    HEADER
    =============================== */
 
+.bk-header {
+    background-color: transparent;
+    border-bottom: 1px solid darken(@color-swatch2,10%);
+    padding-bottom: 33px;
+    .wrapper {
+    padding: 20px 0;
+
+
+    // Flex parent
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: start;
+    align-content: flex-start;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+
+      @media @tablet {
+        display: block;
+      }
+
+    .companyheader {
+      // Flex child
+       -webkit-box-ordinal-group: 1;
+      -moz-box-ordinal-group: 1;
+      -webkit-order: 0;
+      -ms-flex-order: 0;
+      order: 0;
+      -webkit-box-flex: 0;
+      -moz-box-flex: 0;
+      -webkit-flex: 0 1 auto;
+      -ms-flex: 0 1 auto;
+      flex: 0 1 auto;
+      -webkit-align-self: auto;
+      -ms-flex-item-align: auto;
+      align-self: auto;
+
+      // Flex parent
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-direction: normal;
+      -moz-box-direction: normal;
+      -webkit-box-orient: horizontal;
+      -moz-box-orient: horizontal;
+      -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+      -webkit-box-pack: justify;
+      -moz-box-pack: justify;
+      -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      -webkit-align-content: flex-start;
+      -ms-flex-line-pack: start;
+      align-content: flex-start;
+      -webkit-box-align: center;
+      -moz-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+
+      @media @mobile {
+        display: block;
+      }
+
+      @media @tablet {
+        padding-right: 50px;
+        float: left;
+      }
+
+      .widget.companyname {
+        -webkit-box-ordinal-group: 1;
+        -moz-box-ordinal-group: 1;
+        -webkit-order: 0;
+        -ms-flex-order: 0;
+        order: 0;
+        -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+        -webkit-flex: 1 1 auto;
+        -ms-flex: 1 1 auto;
+        flex: 1 1 auto;
+        -webkit-align-self: auto;
+        -ms-flex-item-align: auto;
+        align-self: auto;
+      }
+    }
+    .extendednavigation {
+      // Flex child
+      -webkit-box-ordinal-group: 1;
+      -moz-box-ordinal-group: 1;
+      -webkit-order: 0;
+      -ms-flex-order: 0;
+      order: 0;
+      -webkit-box-flex: 1;
+      -moz-box-flex: 1;
+      -webkit-flex: 1 1 auto;
+      -ms-flex: 1 1 auto;
+      flex: 1 1 auto;
+      -webkit-align-self: auto;
+      -ms-flex-item-align: auto;
+      align-self: auto;
+    }
+  }
+}
+
+
+
+
+
+
 header.bk-header {
   padding: 0;
   background-color: @color-swatch7;
@@ -110,17 +247,14 @@ header.bk-header {
 
 .companyheader {
   display: block;
-  float: left;
   padding: 20px 0px 18px;
-  width: 25%;
 }
 
 /* COMPANY NAME */
 
 .widget.companyname {
-  display: block;
-  float: left;
-  margin-top: 10px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .widget.companyname a {
@@ -140,9 +274,12 @@ header.bk-header {
 /* LOGO */
 
 .widget.logo {
-  display: block;
-  float: left;
+  display: inline-block;
+  vertical-align: middle;
   margin-right: 10px;
+  .logo, img {
+    line-height: 0;
+  }
 }
 
 
@@ -235,19 +372,26 @@ footer.bk-footer .widget.companyname a {
    =============================== */
 
 .widget.extendednavigation {
-  float: right;
   position: relative;
-  width: 75%;
   margin: 20px 0;
+  li.selected {
+    .text {
+      color: @color-swatch3;
+    }
+  }
 }
 
 .widget.extendednavigation a.pull {
-  top:-57px;
+  top: 0;
+  margin-top: 30px;
 }
 
 .widget.extendednavigation ul {
   margin: 0;
   padding: 0;
+  li {
+    padding: 0;
+  }
 }
 
 /* ALIGNMENTS */
@@ -327,7 +471,6 @@ footer.bk-footer .widget.companyname a {
 .widget.extendednavigation li:hover > ul > li > a {
   display: block;
   color: @color-swatch5;
-  padding: 0;
 }
 
 
@@ -1739,13 +1882,15 @@ hr.line.align-right {
     .widget .extendednavigation ul {
         width: 100%;
         display: none;
-        border-top: 1px solid lighten(@color-swatch3,35%);
-        padding: 20px 0; 
+        padding: 0; 
     }
 
     .widget .extendednavigation li {
         width: 100%;
         padding: 0;
+        &:last-of-type {
+          border-bottom: none;
+        }
     }
 
     .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
@@ -1768,8 +1913,12 @@ hr.line.align-right {
         border: 1px solid lighten(@color-swatch3,35%);
     }
 
+    .widget.extendednavigation ul li:hover > ul  {
+        margin-top: 0;
+    }
+
     .widget.extendednavigation ul li:hover > ul li {
-        padding: 10px 30px;
+        padding: 0 30px;
     }
 
     .widget.extendednavigation ul li:hover > ul li .text, .widget.extendednavigation ul li:hover > ul li.folder .text {
